Fixed overflow issue

--- a/src/Navigation.css
+++ b/src/Navigation.css
@@ -7,7 +7,7 @@
 }
 
 .screen-height {
-  height: 100%;
+  height: 100vh;
   min-height: 100vh;
 }
 
